@@ -37,7 +37,7 @@ class Database {
 	 */
 	var $mLastQuery = '';
 	
-	var $mServer, $mUser, $mPassword, $mConn, $mDBname;
+	var $mServer, $mUser, $mPassword, $mConn = null, $mDBname;
 	var $mOut, $mOpened = false;
 	
 	var $mFailFunction; 
@@ -215,7 +215,14 @@ class Database {
 			@/**/$this->mConn = mysql_pconnect( $server, $user, $password );
 		} else {
 			# Create a new connection...
-			@/**/$this->mConn = mysql_connect( $server, $user, $password, true );
+			if( version_compare( PHP_VERSION, '4.2.0', 'ge' ) ) {
+				@/**/$this->mConn = mysql_connect( $server, $user, $password, true );
+			} else {
+				# On PHP 4.1 the new_link parameter is not available. We cannot
+				# guarantee that we'll actually get a new connection, and this
+				# may cause some operations to fail possibly.
+				@/**/$this->mConn = mysql_connect( $server, $user, $password );
+			}
 		}
 
 		if ( $dbName != '' ) {
@@ -1120,7 +1127,10 @@ class Database {
 	 * PostgreSQL doesn't have them and returns ""
 	 */
 	function useIndexClause( $index ) {
-		return "FORCE INDEX ($index)";
+		global $wgDBmysql4;
+		return $wgDBmysql4
+			? "FORCE INDEX ($index)"
+			: "USE INDEX ($index)";
 	}
 
 	/**
